# roblox-clone

./: .gitignore  .replit  CMakeLists.txt  replit.md
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  (+184 more)
src/client/: client.cpp
(+28 files in other folders)
